--- a/notebooks/Initial testing.ipynb
+++ b/notebooks/Initial testing.ipynb
@@ -266,7 +266,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\"Microsoft's quarterly results and guidance showcase its AI prowess\", 'Marketmind: A welcome bounce, but mixed big tech signals', 'Microsoft posts strong results on growing demand for AI services', \"Microsoft's AI bets boost cloud business, Alphabet yet to find silver lining\", 'Alphabet Revenues Up 11 Percent in Q3 on Stronger Ad Sales', 'Policía internacional detiene a grupo criminal que hackeó a Capcom', 'Cloud revenue miss drags on Alphabet’s stock, despite strong results overall', 'Galaxy Book 4 Ultra and Snapdragon X Elite can be a match made in heaven', 'デル、新開発のAzureハイブリッドクラウド基盤を発表', 'Microsoft รายงานผลประกอบการ เติบโตสูงโดยเฉพาะธุรกิจคลาวด์']\n"
+      "['IBM beats expectations as AI powers software revenue growth', 'Chile declara oficialmente su intención de liderar la gobernanza IA en Latinoamérica', 'Amazon Takes on AI Rivals with Child-Friendly Alexa Features', 'SHOW and TELL 10/25/2023 #ShowandTell', '[Removed]', 'Four major tech companies announce over $10M for new AI Safety Fund', 'Four Major Tech Companies Announce Over $10M for New AI Safety Fund', 'Is it arrogance or obstacles for Samsung MX to not exist at Snapdragon Summit?', 'How to Generate AI Images from Text using Dall-E in MS Word', 'Data center firm Equinix trims annual revenue forecast on weak corporate spending']\n"
      ]
     }
    ],
@@ -291,7 +291,7 @@
     {
      "data": {
       "text/plain": [
-       "'original dataset: 1400 headlines, cleaned dataset: 809 headlines, 591 headlines removed'"
+       "'original dataset: 1400 headlines, cleaned dataset: 810 headlines, 590 headlines removed'"
       ]
      },
      "execution_count": 12,
@@ -337,7 +337,7 @@
     {
      "data": {
       "text/plain": [
-       "{'pos': 250, 'neg': 135, 'neu': 424}"
+       "{'pos': 249, 'neg': 133, 'neu': 428}"
       ]
      },
      "execution_count": 13,
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "48dc57ab",
    "metadata": {},
    "outputs": [
@@ -389,21 +389,23 @@
     }
    ],
    "source": [
-    "#import csv\n",
-    "#import os\n",
+    "import csv\n",
+    "import os\n",
+    "## ONLY TO CREATE FILE\n",
     "\n",
-    "# Define the header for your CSV file\n",
-    "#header = ['Title', 'Description', 'Source', 'Published At']\n",
+    "#\n",
+    "#Define the header for your CSV file\n",
+    "header = ['Title', 'Description', 'Source', 'Published At']\n",
     "\n",
     "# Specify the file path for your CSV file in the data folder\n",
-    "#csv_file_path = os.path.join('..', 'data', 'news_headlines.csv')\n",
+    "csv_file_path = os.path.join('..', 'data', 'news_headlines.csv')\n",
     "\n",
     "# Open the CSV file in write mode and write the header\n",
-    "#with open(csv_file_path, 'w', newline='', encoding='utf-8') as csvfile:\n",
-    "#    csv_writer = csv.writer(csvfile)\n",
-    "#    csv_writer.writerow(header)\n",
+    "with open(csv_file_path, 'w', newline='', encoding='utf-8') as csvfile:\n",
+    "    csv_writer = csv.writer(csvfile)\n",
+    "    csv_writer.writerow(header)\n",
     "\n",
-    "#print(f'CSV file \"{csv_file_path}\" created successfully with header: {header}')\n"
+    "print(f'CSV file \"{csv_file_path}\" created successfully with header: {header}')\n"
    ]
   },
   {
